[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/entities/props/breakable_object.gd" type="Script" id=1]
[ext_resource path="res://assets/shaders/recolor.tres" type="Shader" id=2]
[ext_resource path="res://assets/tiles/BreakableBlock1.png" type="Texture" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/color = Color( 1, 1, 1, 1 )
shader_param/intensity = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.01148, 7.78474 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12, 12 )

[sub_resource type="Animation" id=4]
resource_name = "default"

[sub_resource type="Animation" id=5]
resource_name = "shake"
length = 0.1
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/intensity")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0.5, 0.25 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 0 ), Vector2( 1, 0 ) ]
}

[node name="BreakWall" type="StaticBody2D" groups=[
"entity",
"prop",
]]
material = SubResource( 1 )
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 4 )
anims/shake = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
texture = ExtResource( 3 )

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
